@@ -16,11 +16,10 @@
 
   <groupId>com.azure</groupId>
   <artifactId>azure-search-documents</artifactId>
-  <version>1.0.0-beta.4</version> <!-- {x-version-update;com.azure:azure-search-documents;current} -->
+  <version>11.0.0</version> <!-- {x-version-update;com.azure:azure-search-documents;current} -->
   <packaging>jar</packaging>
 
   <properties>
-    <project.automatic.module.name>com.azure.search</project.automatic.module.name>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
   </properties>
@@ -29,12 +28,12 @@
     <dependency>
       <groupId>com.azure</groupId>
       <artifactId>azure-core</artifactId>
-      <version>1.5.0</version> <!-- {x-version-update;com.azure:azure-core;dependency} -->
+      <version>1.6.0-beta.1</version> <!-- {x-version-update;unreleased_com.azure:azure-core;dependency} -->
     </dependency>
     <dependency>
       <groupId>com.azure</groupId>
       <artifactId>azure-core-http-netty</artifactId>
-      <version>1.5.1</version> <!-- {x-version-update;com.azure:azure-core-http-netty;dependency} -->
+      <version>1.6.0-beta.1</version> <!-- {x-version-update;unreleased_com.azure:azure-core-http-netty;dependency} -->
     </dependency>
 
     <!-- Added this dependency to include necessary annotations used by reactor core.
@@ -51,7 +50,7 @@
     <dependency>
       <groupId>com.azure</groupId>
       <artifactId>azure-core-test</artifactId>
-      <version>1.2.1</version> <!-- {x-version-update;com.azure:azure-core-test;dependency} -->
+      <version>1.4.0-beta.1</version> <!-- {x-version-update;unreleased_com.azure:azure-core-test;dependency} -->
       <scope>test</scope>
     </dependency>
     <dependency>
@@ -84,12 +83,6 @@
       <version>3.3.5.RELEASE</version> <!-- {x-version-update;io.projectreactor:reactor-test;external_dependency} -->
       <scope>test</scope>
     </dependency>
-    <dependency>
-      <groupId>com.azure</groupId>
-      <artifactId>azure-test-watcher</artifactId>
-      <version>1.0.0-beta.1</version> <!-- {x-version-update;com.azure:azure-test-watcher;dependency} -->
-      <scope>test</scope>
-    </dependency>
   </dependencies>
 
   <profiles>
@@ -109,6 +102,7 @@
                 --add-exports com.azure.core/com.azure.core.implementation.http=ALL-UNNAMED
                 --add-opens com.azure.core/com.azure.core.util=ALL-UNNAMED
                 --add-opens com.azure.search.documents/com.azure.search.documents=ALL-UNNAMED
+                --add-opens com.azure.search.documents/com.azure.search.documents.indexes=ALL-UNNAMED
                 --add-opens com.azure.search.documents/com.azure.search.documents.models=ALL-UNNAMED
                 --add-opens com.azure.search.documents/com.azure.search.documents.implementation=ALL-UNNAMED
                 --add-opens com.azure.search.documents/com.azure.search.documents.implementation.models=ALL-UNNAMED
